@@ -21,9 +21,11 @@ import static java.lang.Integer.parseInt;
 @Slf4j
 public class TvMovieService {
 
-	static TheTVDBApi tvdb = new TheTVDBApi(Constants.API_KEY);
-	private static final Pattern PATTERN = Pattern.compile(Constants.REGEX_SERIES_EPISODE);
-	private static final Pattern PATTERN2 = Pattern.compile(Constants.REGEX_SERIES_EPISODE2);
+	private final TheTVDBApi tvdb;
+
+	public TvMovieService(TheTVDBApi tvdb) {
+		this.tvdb = tvdb;
+	}
 
 	/**
 	 * Method refactorFilesAddTitle.
@@ -32,7 +34,7 @@ public class TvMovieService {
 	 * @param parentDir String
 	 * @return boolean
      */
-	public static List<String> refactorFilesAddTitle(String seriesName, List<Path> files, String parentDir,
+	public List<String> refactorFilesAddTitle(String seriesName, List<Path> files, String parentDir,
 													 Optional<String> seriesId) throws IOException {
 		List<String> removableFolders = new ArrayList<>();
 
@@ -52,7 +54,7 @@ public class TvMovieService {
 	 * @param dir Path
 	 * @return List<Path>
      */
-	public static List<Path> getDirectories(final Path dir) throws IOException {
+	public List<Path> getDirectories(final Path dir) throws IOException {
 		if (Files.exists(dir) && Files.isDirectory(dir)) {
 			return Files.list(dir)
 						.filter(Files::isDirectory)
@@ -66,9 +68,11 @@ public class TvMovieService {
 	 * @param dir Path
 	 * @return List<Path>
      */
-	public static List<Path> getMovieFiles(final Path dir) throws IOException {
+	public List<Path> getMovieFiles(final Path dir) throws IOException {
 		final List<Path> fileList = new ArrayList<>();
-		traverseDirectory(dir, fileList);
+		if (Files.exists(dir)) {
+			traverseDirectory(dir, fileList);
+		}
 		return fileList;
 	}
 
@@ -77,7 +81,7 @@ public class TvMovieService {
 	 * @param dir Path
 	 * @return List<Path>
      */
-	public static List<Path> getSeasonDirs(final Path dir) throws IOException {
+	public List<Path> getSeasonDirs(final Path dir) throws IOException {
 		List<Path> seasonDirs = new ArrayList<>();
 
 		if (Files.exists(dir) && Files.isDirectory(dir)) {
@@ -93,12 +97,12 @@ public class TvMovieService {
 	 * Method deleteDirectory.
 	 * @param path Path
      */
-	public static void deleteDirectory(Path path, String remove) throws IOException{
+	public void deleteDirectory(Path path, String remove) throws IOException{
 		Path removable = Path.of(path.toString(), remove);
 		Files.walkFileTree(removable, new RemovableDirectoryVisitor());
 	}
 
-	public static List<String> identifyPotentialMissingEpisodes(final Path dir, final List<String> ignorable) throws IOException {
+	public List<String> identifyPotentialMissingEpisodes(final Path dir, final List<String> ignorable) throws IOException {
 		List<Path> files = getMovieFiles(dir);
 		int[] episodeIds = null;
 		String episodeName;
@@ -107,13 +111,13 @@ public class TvMovieService {
 		SortedSet<Integer> episodes = new TreeSet<>();
 		int season = 0;
 		for(Path file:files) {
-			Matcher itemMatcher = PATTERN.matcher(file.toString());
+			Matcher itemMatcher = Pattern.compile(Constants.REGEX_SERIES_EPISODE).matcher(file.toString());
 			while(itemMatcher.find()){
 				episodeName = itemMatcher.group();
 				episodeIds = TvShowUtils.getEpisodeIds(episodeName, "E", 1);
 			}
 			if(episodeIds == null){
-				itemMatcher = PATTERN2.matcher(file.toString());
+				itemMatcher = Pattern.compile(Constants.REGEX_SERIES_EPISODE2).matcher(file.toString());
 				while(itemMatcher.find()){
 					episodeName = itemMatcher.group();
 					episodeIds = TvShowUtils.getEpisodeIds(episodeName, "X", 0);
@@ -130,9 +134,9 @@ public class TvMovieService {
 		return checkSeasonEpisodes(dir, seasonEpisodes, ignorable);
 	}
 
-	private static void processFile(String seriesName, Optional<String> seriesId, List<Series> seriesList,
-									Path file, String parentDir, List<String> removableFolders) {
-		Matcher itemMatcher = PATTERN.matcher(file.toString());
+	private void processFile(String seriesName, Optional<String> seriesId, List<Series> seriesList,
+							Path file, String parentDir, List<String> removableFolders) {
+		Matcher itemMatcher = Pattern.compile(Constants.REGEX_SERIES_EPISODE).matcher(file.toString());
 		int[] episodeIds = null;
 		String episodeName = null;
 
@@ -143,7 +147,7 @@ public class TvMovieService {
 		}
 
 		if (episodeIds == null) {
-			itemMatcher = PATTERN2.matcher(file.toString());
+			itemMatcher = Pattern.compile(Constants.REGEX_SERIES_EPISODE2).matcher(file.toString());
 			while (itemMatcher.find()) {
 				episodeName = itemMatcher.group();
 				episodeIds = TvShowUtils.getEpisodeIds(episodeName, "X", 0);
@@ -168,24 +172,24 @@ public class TvMovieService {
         handleRemovableFolders(currentParentDir, removableFolders);
 	}
 
-	private static Episode getEpisodeDetails(List<Series> seriesList, Optional<String> seriesId, int[] episodeIds) {
+	private Episode getEpisodeDetails(List<Series> seriesList, Optional<String> seriesId, int[] episodeIds) {
 		Episode ep = null;
 
 		if (seriesList != null && episodeIds != null) {
 			log.info("Series {} Episodes {}", episodeIds[0], episodeIds[1]);
-			ep = tvdb.getEpisode(seriesId.orElse(seriesList.get(0).getId()), episodeIds[0], episodeIds[1], Constants.LANGUAGE);
+			ep = tvdb.getEpisode(seriesId.orElse(seriesList.getFirst().getId()), episodeIds[0], episodeIds[1], Constants.LANGUAGE);
 		}
 
 		return ep;
 	}
 
-	private static String buildNewFileName(Episode ep, String episodeName, Path file) {
+	private String buildNewFileName(Episode ep, String episodeName, Path file) {
 		String fileName = file.getFileName().toString();
 		String ext = fileName.substring(fileName.lastIndexOf("."));
 		return (ep != null) ? TvShowUtils.buildFileName(ep) + ext : (episodeName != null) ? episodeName + ext : fileName;
 	}
 
-	private static String determineNewDir(String parentDir, String currentParentDir, Path file) {
+	private String determineNewDir(String parentDir, String currentParentDir, Path file) {
 		String newDir;
 
 		if (parentDir == null) {
@@ -200,7 +204,7 @@ public class TvMovieService {
 		return newDir;
 	}
 
-	private static Path findNearestSeasonDirectory(Path directory) {
+	private Path findNearestSeasonDirectory(Path directory) {
 		Path currentDir = directory;
 
 		while (currentDir != null) {
@@ -214,7 +218,7 @@ public class TvMovieService {
 		return directory; // Return the original directory if no "Season" directory is found
 	}
 
-	public static List<String> identifyPotentialMissingSeasons(final Path dir) throws IOException {
+	public List<String> identifyPotentialMissingSeasons(final Path dir) throws IOException {
 		List<Path> seasons = getSeasonDirs(dir);
 		SortedSet<Integer> seasonIds = new TreeSet<>();
 		List<String> missingSeasons = new ArrayList<>();
@@ -228,7 +232,7 @@ public class TvMovieService {
 		return missingSeasons;
 	}
 
-	private static List<String> checkSeasonEpisodes(Path dir, Map<Integer, SortedSet<Integer>> seasonEpisodes,
+	private List<String> checkSeasonEpisodes(Path dir, Map<Integer, SortedSet<Integer>> seasonEpisodes,
 													List<String> ignorable) {
 		List<String> missingEpisodes = new ArrayList<>();
 		seasonEpisodes.keySet().parallelStream().forEach(s -> {
@@ -242,7 +246,7 @@ public class TvMovieService {
 		return missingEpisodes;
 	}
 
-	private static Set<Integer> getMissingNumbers(SortedSet<Integer> sortedSet) {
+	private Set<Integer> getMissingNumbers(SortedSet<Integer> sortedSet) {
 		Set<Integer> missing = new HashSet<>();
 		if (!sortedSet.isEmpty()) {
 			for (int i = 1; i <= sortedSet.last(); i++) {
@@ -254,7 +258,7 @@ public class TvMovieService {
 		return missing;
 	}
 
-	private static Set<Integer> removeIgnorable(int season, Set<Integer> missingEpisodes, List<String> ignorable) {
+	private Set<Integer> removeIgnorable(int season, Set<Integer> missingEpisodes, List<String> ignorable) {
 		return missingEpisodes.stream()
 							  .map(episodeId -> String.format("S%02dE%02d", season, episodeId))
 							  .filter(seasonEpisode -> !ignorable.contains(seasonEpisode))
@@ -262,9 +266,7 @@ public class TvMovieService {
 							  .collect(Collectors.toSet());
 	}
 
-
-
-	private static void moveFileIfNeeded(Path file, String newFileName, String currentParentDir, String newDir) throws IOException {
+	private void moveFileIfNeeded(Path file, String newFileName, String currentParentDir, String newDir) throws IOException {
 		Path target = Paths.get(newDir, newFileName.replaceAll("\"", "").replace("*", "_"));
 		if (!file.toString().equals(target.toString())) {
 			log.info("Moving {} to {}", file, target);
@@ -272,14 +274,14 @@ public class TvMovieService {
 		}
 	}
 
-	private static void handleRemovableFolders(String currentParentDir, List<String> removableFolders) {
+	private void handleRemovableFolders(String currentParentDir, List<String> removableFolders) {
 		if (!currentParentDir.matches("Season\\s\\d+")) {
 			log.info("Current Parent directory {} is not the Season folder", currentParentDir);
 			removableFolders.add(currentParentDir);
 		}
 	}
 
-	private static void traverseDirectory(Path dir, List<Path> fileList) throws IOException {
+	private void traverseDirectory(Path dir, List<Path> fileList) throws IOException {
 		try (DirectoryStream<Path> stream = Files.newDirectoryStream(dir)) {
 			for (Path path : stream) {
 				Path file = dir.resolve(path);
